--- a/index.html
+++ b/index.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="Style.css">
+    <link rel="stylesheet" type="text/css" href="light.css" id="theme-link">
 </head>
 <body>
-$END$
+<label class="switch">
+    <input type="checkbox" id="theme-button">
+    <span class="slider round"></span>
+</label>
+<div class="container">
+
+    <h1>Registration form</h1>
+
+<form>
+    <div class="form-input">
+        <label for="login-input">Enter your login</label>
+        <input type="text" id="login-input" placeholder="Login" />
+    </div>
+    <div class="form-input">
+        <label for="mail-input">Enter your mail</label>
+        <input type="text" id="mail-input" placeholder="Mail" />
+    </div>
+    <div class="form-input">
+        <label for="password-input">Enter your password</label>
+        <input type="password" id="password-input" placeholder="Password"/>
+    </div>
+        <input type="submit" value="Register"/>
+</form>
+</div>
+<script>
+    var btn = document.getElementById("theme-button");
+    var link = document.getElementById("theme-link");
+
+    btn.addEventListener("click", function () { ChangeTheme(); });
+
+    function ChangeTheme()
+    {
+        let lightTheme = "light.css";
+        let darkTheme = "dark.css";
+
+        var currTheme = link.getAttribute("href");
+        var theme = "";
+
+        if(currTheme == lightTheme)
+        {
+            currTheme = darkTheme;
+            theme = "dark";
+        }
+        else
+        {
+            currTheme = lightTheme;
+            theme = "light";
+        }
+
+        link.setAttribute("href", currTheme);
+
+        Save(theme);
+    }
+</script>
 </body>
 </html>
