--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
 </label>
 <div class="container">
     <h1>Registration form</h1>
-    <form action="#" class="form">
+    <form action="/reg-data" method="post" class="form">
     <div class="form-input">
         <label for="login-input">Enter your login</label>
         <input id="login-input"
@@ -37,7 +37,7 @@
     </div>
     <div class="form-input">
         <label for="country-input">Country</label>
-        <select id="country-input" name="select_country">
+        <select id="country-input" name="country">
             <option value="-"> - </option>
             <option value="russia"> Russia </option>
             <option value="other"> Other </option>
